BOLT-22963 Trending: Ad images no longer stretch/squish in isotope tile items

--- a/app/styles/v2/Vivanuncios/partials/components/adTile/_adTile.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/adTile/_adTile.scss
@@ -13,9 +13,10 @@ $panelCornerBorderRadius: 7px;
 	border: 1.5px solid transparent;
 
 
-	img {
+	.ad-image {
 		width: 100%;
 		height: 100%;
+		object-fit: cover;
 		border-radius: 6px;
 	}
 
